updated v2api to the new pre-translated database; TODO: test hero,ex_equip,ranking
