# src/router/ex_equip/single.js
@@ -10,32 +10,44 @@ import {
 
 export default asyncRoute(async (req, res, next) => {
 	const TIME_START = process.hrtime();
+	const { _id } = req.params;
 
 	try {
 		const requestedLanguage = getCurrentLanguage(req);
-		const collection = Database.getCollection(`hero_${requestedLanguage}`);
+		const collection = Database.getCollection(`ex_equip_${requestedLanguage}`);
 
-		if (!collection || !requestedLanguage) {
-			throw new Error('!collection || !requestedLanguage');
+		if (!collection || !requestedLanguage || !_id) {
+			throw new Error('!collection || !requestedLanguage || !_id');
 		}
 
-		const heroList = await collection
+		const exEquipDetail = await collection
 			.aggregate([
+				{ $match: { _id } },
+				{
+					$lookup: {
+						from: `hero_${requestedLanguage}`,
+						localField: 'unit',
+						foreignField: 'id',
+						as: 'unit',
+					},
+				},
 				{
 					$project: {
 						_id: 1,
 						name: 1,
-						moonlight: 1,
-						rarity: 1,
-						attribute: 1,
+						description: 1,
+						icon: 1,
 						role: 1,
-						zodiac: 1,
-						devotion: { type: 1 },
-						self_devotion: { type: 1 },
-						skills: {
-							buff: 1,
-							debuff: 1,
-							other: 1,
+						rarity: 1,
+						stat: 1,
+						unit: {
+							_id: 1,
+							id: 1,
+							name: 1,
+							rarity: 1,
+							attribute: 1,
+							role: 1,
+							zodiac: 1,
 						},
 					},
 				},
@@ -46,9 +58,9 @@ export default asyncRoute(async (req, res, next) => {
 			})
 			.toArray();
 
-		if (heroList && heroList.length) {
+		if (exEquipDetail && exEquipDetail.length) {
 			nodeTimer(TIME_START);
-			return mountApiResponse({}, res, null, heroList);
+			return mountApiResponse({}, res, null, exEquipDetail);
 		}
 		return mountApiErrorResponse(res, MESSAGES.query.invalid);
 	} catch (error) {
